--- a/Calculator/css/style.css
+++ b/Calculator/css/style.css
@@ -1,17 +1,16 @@
 .wrapper {
-  width: 400px;
-  height: 700px;
-  background-color: #000;
+  width: 390px;
+  height: 844px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  background-color: #000;
   align-items: center;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .container {
-  width: 400px;
-  height: 670px;
+  height: 800px;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
@@ -19,42 +18,48 @@
 }
 
 .screen {
-  color: #fff;
-  font-size: 70px;
-  width: 295px;
+  height: 230px;
+  width: 320px;
   overflow: hidden;
-  height: 200px;
+  color: #fff;
+  font-size: 90px;
+  font-weight: 300;
   text-align: right;
 }
 
 button {
   width: 80px;
   height: 80px;
+  margin: 3px;
   border-radius: 50%;
   font-size: 40px;
-  color: #fff;
   border: 1px solid transparent;
 }
 
 .buttons {
   height: 450px;
+  max-width: 390px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
 }
-.buttons__row button {
-  background-color: rgba(219, 218, 218, 0.199);
-}
 
-.buttons__row_1 button {
+.row__grey {
   color: #000;
-  background-color: rgb(168, 168, 168);
+  background-color: rgba(158, 158, 158, 0.877);
 }
-
-.btn-number__null {
+.row__orange {
+  color: #fff;
+  background-color: orange;
+}
+.row__darkgrey {
+  color: #fff;
+  background-color: rgba(158, 158, 158, 0.349);
+}
+.row__darkgrey_null {
   width: 170px;
   border-radius: 40px;
-  padding-left: 10%;
+  padding-left: 8%;
   text-align: left;
 }
