--- a/Calculator/css/style.scss
+++ b/Calculator/css/style.scss
@@ -21,12 +21,14 @@
 	justify-content: flex-end;
 	align-items: end;
 	height: 230px;
-	width: 320px;
+	width: 339px;
 	overflow: hidden;
 	color: #fff;
 	font-size: 90px;
 	font-weight: 300;	
 	margin-bottom: 10px;
+	word-break: break-all;
+	text-align: right;
 }
 button{
 	width: 80px;
